Revert "remove visible"
This reverts commit 5b5bd3aef906ba309a630efa1fbd7633eb3f6b4f.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             @ok="settingsHandleOK"
             @on.keyup.enter="settingsHandleOK"
             auto-focus-button="ok"
+            visible
           >
             <b-form>
               <b-form-group
